# aipseo

./: .coverage  .gitignore  AGENT.md  LICENSE  README.md  license  notice  push_to_github.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
MCP/: llms-full.txt
aipseo/: __init__.py  agent_tools.py  api.py  cli.py  mcp_server.py  toolspec.py  utils.py
aipseo/commands/: __init__.py  init.py  lookup.py  market.py  spam_score.py  validate.py  wallet.py
tests/: __init__.py  conftest.py  mock_mcp.py  test_agent_tools.py  test_cli.py  test_commands.py  test_import.py  test_integration.py  test_market.py  test_mcp_server.py  test_toolspec.py  test_utils.py  test_wallet.py
